VT-874 Lokalisointipalvelun käyttöönotto valinnoissa

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -263,6 +263,9 @@ yhteisvalinnanhallinta.header=Yhteisvalinnan hallinta
 common.etusivu=Valintaryhm\u00E4t ja hakukohteet
 common.laskentakaava=Laskentakaavat
 common.import=Yhteisvalinnan hallinta
+common.muista=Muista tallentaa muutoksesi
+common.takaisin=Takaisin
+common.tallenna=Tallenna
 
 yhteisvalinnanhallinta.synkronoi=Synkronoi tarjonta
 
@@ -301,9 +304,6 @@ valintatapajono.maara=M\u00E4\u00E4r\u00E4
 valintatapajono.periytyy=Periytyy
 valintatapajono.liita=Liit\u00E4 hakijaryhm\u00E4
 valintatapajono.tallennahakijaryhma=Tallenna jono lis\u00E4t\u00E4ksesi hakijaryhm\u00E4.
-valintatapajono.muista=Muista tallentaa muutoksesi
-valintatapajono.takaisin=Takaisin
-valintatapajono.tallenna=Tallenna
 
 hakijaryhmavalintatapajono.header=Hakijaryhm\u00E4n liitt\u00E4minen
 hakijaryhmavalintatapajono.hakijaryhmat=Hakijaryhm\u00E4t
@@ -312,8 +312,6 @@ hakijaryhmavalintatapajono.laskentakaava=Laskentakaava
 hakijaryhmavalintatapajono.kiintio=Kiinti\u00F6
 hakijaryhmavalintatapajono.periytyy=Periytyy
 hakijaryhmavalintatapajono.liita=Liit\u00E4
-hakijaryhmavalintatapajono.muista=Muista tallentaa muutoksesi
-hakijaryhmavalintatapajono.takaisin=Takaisin
 
 valintaryhmatlistaus.header=Valintaperusteet
 valintaryhmatlistaus.avaapuu=Avaa puu
@@ -339,9 +337,6 @@ valintaryhmalomakeuusi.nimipieni=nimi
 valintaryhmalomakeuusi.tyyppi=tyyppi
 valintaryhmalomakeuusi.oid=oid
 valintaryhmalomakeuusi.poista=poista
-valintaryhmalomakeuusi.muista=Muista tallentaa muutoksesi
-valintaryhmalomakeuusi.takaisin=Takaisin
-valintaryhmalomakeuusi.tallenna=Tallenna
 
 valintaryhmalomake.header=Valintaryhm\u00E4n muokkaus
 valintaryhmalomake.nimi=Nimi
@@ -358,9 +353,6 @@ valintaryhmalomake.hakijaryhmat=Hakijaryhm\u00E4t
 valintaryhmalomake.laskentakaava=Laskentakaava
 valintaryhmalomake.kiintio=Kiinti\u00F6
 valintaryhmalomake.hakijaryhma=Hakijaryhm\u00E4
-valintaryhmalomake.muista=Muista tallentaa muutoksesi
-valintaryhmalomake.takaisin=Takaisin
-valintaryhmalomake.tallenna=Tallenna
 
 valintakoekoodit.header=Valintakoekoodit
 valintakoekoodit.uusi=Uusi valintakoekoodi
@@ -377,3 +369,22 @@ hakukohdekoodit.koodi=koodi
 hakukohdekoodit.arvo=arvo
 hakukohdekoodit.nimi=nimi
 hakukohdekoodit.poista=poista
+
+valintakoelomake.header=Valintakokeen muokkaus
+valintakoelomake.tunniste=Tunniste
+valintakoelomake.nimi=Nimi
+valintakoelomake.kuvaus=Kuvaus
+valintakoelomake.lahetetaanko=L\u00E4hetet\u00E4\u00E4nk\u00F6 koekutsut
+valintakoelomake.kutsutaanko=Kutsutaanko kaikki
+valintakoelomake.valintakokeenlaskentakaava=Valintakokeen laskentakaava
+valintakoelomake.laskentakaava=Laskentakaava
+valintakoelomake.valintaryhma=Valintaryhm\u00E4 / Hakukohde
+
+valintakoevalinnanvaihelomake.header=Koekutsuvaiheen muokkaus
+valintakoevalinnanvaihelomake.nimi=Nimi
+valintakoevalinnanvaihelomake.kuvaus=Kuvaus
+valintakoevalinnanvaihelomake.valintakokeet=Valintakokeet
+valintakoevalinnanvaihelomake.aktiivinen=Aktiivinen
+valintakoevalinnanvaihelomake.tunniste=Tunniste
+valintakoevalinnanvaihelomake.poista=Poista
+valintakoevalinnanvaihelomake.valintakoe=Valintakoe
