VT-874 Lokalisointipalvelun käyttöönotto valinnoissa

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -388,3 +388,104 @@ valintakoevalinnanvaihelomake.aktiivinen=Aktiivinen
 valintakoevalinnanvaihelomake.tunniste=Tunniste
 valintakoevalinnanvaihelomake.poista=Poista
 valintakoevalinnanvaihelomake.valintakoe=Valintakoe
+
+valinnanvaihelomake.header=Valinnanvaiheen muokkaus
+valinnanvaihelomake.kuuluu=Kuuluu sijoitteluun
+valinnanvaihelomake.nimi=Nimi
+valinnanvaihelomake.kuvaus=Kuvaus
+valinnanvaihelomake.valintatapajonot=Valintatapajonot
+valinnanvaihelomake.aktiivinen=Aktiivinen
+valinnanvaihelomake.periytyminen=Periytyminen
+valinnanvaihelomake.poista=Poista
+
+laskentakaavalista.header=Laskentakaavojen hallinta
+laskentakaavalista.laskentakaava=Laskentakaava
+laskentakaavalista.laskentakaavalista=Laskentakaavalista
+laskentakaavalista.yhtaan=Yht\u00E4\u00E4n laskentakaavaa ei ole luotu.
+laskentakaavalista.nimi=Nimi
+laskentakaavalista.kuvaus=Kuvaus
+
+hakukohdelaskentakaavalista.header=Laskentakaavojen hallinta
+hakukohdelaskentakaavalista.uusi=Uusi laskentakaava
+hakukohdelaskentakaavalista.laskentakaavalista=Laskentakaavalista
+hakukohdelaskentakaavalista.tallehakukohteelle=T\u00E4lle hakukohteelle ei ole luotu yht\u00E4\u00E4n laskentakaavaa.
+hakukohdelaskentakaavalista.nimi=Nimi
+hakukohdelaskentakaavalista.kuvaus=Kuvaus
+hakukohdelaskentakaavalista.yhtaan=Yht\u00E4\u00E4n laskentakaavaa ei ole luotu.
+hakukohdelaskentakaavalista.tallevalintaryhmalle=T\u00E4lle valintaryhm\u00E4lle ei ole luotu yht\u00E4\u00E4n laskentakaavaa.
+
+uusilaskentakaava.alusta=Alusta uusi laskentakaava
+uusilaskentakaava.luonti=Uuden laskentakaavan luonti
+uusilaskentakaava.nimi=Laskentakaavan nimi
+uusilaskentakaava.kuvaus=Laskentakaavan kuvaus
+uusilaskentakaava.tyyppi=Laskentakaavan tyyppi
+uusilaskentakaava.totuusarvofunktio=Totuusarvofunktio
+uusilaskentakaava.lukuarvofunktio=Lukuarvofunktio
+
+laskentakaavalomake.header=Laskentakaavan muokkaus
+
+laskentakaavapuu.eitalletettu=Laskentakaavaa ei voitu tallentaa.
+laskentakaavapuu.eitalletettutext=Alla olevasta listasta saat vihjeitä kaavan virheistä ja virheellisen funktiokutsun tapauksessa pääset muokkaamaan sitä suoraan klikkaamalla virheilmoitusta. Yritä laskentakaavan tallennusta uudestaan heti virheet korjattuasi.
+laskentakaavapuu.funktiossavirhe=-funktiokutsussa on virhe.
+laskentakaavapuu.onnistui=Laskentakaavan tallentaminen onnistui
+laskentakaavapuu.laskentakaava=Laskentakaava
+laskentakaavapuu.huonoin=huonoin
+laskentakaavapuu.paras=paras
+laskentakaavapuu.suurimmankeskiarvo=suurimman keskiarvo
+laskentakaavapuu.suurimmansumma=suurimman summa
+laskentakaavapuu.nimettylukuarvo=Nimetty lukuarvo
+laskentakaavapuu.nimettytotuusarvo=Nimetty totuusarvo
+laskentakaavapuu.tosi=Tosi
+laskentakaavapuu.epatosi=Ep\u00E4tosi
+laskentakaavapuu.summa=Summa
+laskentakaavapuu.osoittaja=Osoittaja
+laskentakaavapuu.nimittaja=Nimitt\u00E4j\u00E4
+laskentakaavapuu.painotuskerroin=Painotuskerroin
+laskentakaavapuu.lukuarvo=Lukuarvo
+laskentakaavapuu.funktioargumentti=Funktioargumentti
+laskentakaavapuu.vasenoperandi=Vasen operandi
+laskentakaavapuu.oikeaoperandi=Oikea operandi
+laskentakaavapuu.ehto=Ehto
+laskentakaavapuu.sitten=Sitten
+laskentakaavapuu.muuten=Muuten
+laskentakaavapuu.lisaa=Lis\u00E4\u00E4 uusi funktio
+laskentakaavapuu.haelukuarvo=Hae lukuarvo
+laskentakaavapuu.vakio=Vakio
+laskentakaavapuu.jos=Jos
+laskentakaavapuu.tulo=Tulo
+laskentakaavapuu.osamaara=Osam\u00E4\u00E4r\u00E4
+laskentakaavapuu.keskiarvo=Keskiarvo
+laskentakaavapuu.mediaani=Mediaani
+laskentakaavapuu.minimi=Minimi
+laskentakaavapuu.maksimi=Maksimi
+laskentakaavapuu.nparastasumma=N parasta summa
+laskentakaavapuu.nparastakeskiarvo=N parasta keskiarvo
+laskentakaavapuu.nparas=N paras
+laskentakaavapuu.nhuonoin=N huonoin
+laskentakaavapuu.negaatio=Negaatio
+laskentakaavapuu.pyoristys=Py\u00F6ristys
+laskentakaavapuu.hylkaa=Hylk\u00E4\u00E4
+laskentakaavapuu.hylkaaarvovalilla=Hylk\u00E4\u00E4 arvov\u00E4lill\u00E4
+laskentakaavapuu.konversio=Konversio
+laskentakaavapuu.yoosakoearvosana=YO-osakoearvosana
+laskentakaavapuu.haemerkkijono=Hae merkkijono ja konvertoi lukuarvoksi
+laskentakaavapuu.skaalaus=Skaalaus
+laskentakaavapuu.painotettukeskiarvo=Painotettu keskiarvo
+laskentakaavapuu.haelukuarvoehdolla=Hae lukuarvo ehdolla
+laskentakaavapuu.yoarvosana=YO-arvosana
+laskentakaavapuu.viittaus=Viittaus toiseen kaavaan
+laskentakaavapuu.haetotuusarvo=Hae totuusarvo
+laskentakaavapuu.tai=Tai
+laskentakaavapuu.suurempitaiyhtasuuri=Suurempi tai yht\u00E4 suuri
+laskentakaavapuu.suurempi=Suurempi
+laskentakaavapuu.yhtasuuri=Yht\u00E4 suuri
+laskentakaavapuu.pienempi=Pienempi
+laskentakaavapuu.pienempitaiyhtasuuri=Pienempi tai yht\u00E4 suuri
+laskentakaavapuu.ei=Ei
+laskentakaavapuu.totuusarvo=Totuusarvo
+laskentakaavapuu.ja=Ja
+laskentakaavapuu.demografia=Demografia
+laskentakaavapuu.hakutoive=Hakutoive
+laskentakaavapuu.haemerkkijonototuusarvoksi=Hae merkkijono ja konvertoi totuusarvoksi
+laskentakaavapuu.haemerkkijonoyhtasuuruus=Hae merkkijono ja vertaa yht\u00E4suuruus
+laskentakaavapuu.valintaperusteyhtasuuruus=Valintaperusteyht\u00E4suuruus
