VT-874 Lokalisointipalvelun käyttöönotto valinnoissa

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -489,3 +489,52 @@ laskentakaavapuu.hakutoive=Hakutoive
 laskentakaavapuu.haemerkkijonototuusarvoksi=Hae merkkijono ja konvertoi totuusarvoksi
 laskentakaavapuu.haemerkkijonoyhtasuuruus=Hae merkkijono ja vertaa yht\u00E4suuruus
 laskentakaavapuu.valintaperusteyhtasuuruus=Valintaperusteyht\u00E4suuruus
+
+laskentakaavaviiteasetuksetmodal.laskentakaavaviitteen=Laskentakaavaviitteen valinta
+laskentakaavaviiteasetuksetmodal.alikaavan=Alikaavan laskentakaavaviite
+laskentakaavaviiteasetuksetmodal.eivoivaihtaa=Alikaavan laskentakaavaviitteit\u00E4 ei voi vaihtaa. Voit kuitenkin siirty\u00E4 suoraan valitsemasi laskentakaavan muokkaukseen kyn\u00E4-ikonista.
+laskentakaavaviiteasetuksetmodal.nimi=Valitun laskentakaavaviitteen nimi
+laskentakaavaviiteasetuksetmodal.valintaryhma=Valintaryhm\u00E4
+laskentakaavaviiteasetuksetmodal.poista=Poista laskentakaavaviite
+laskentakaavaviiteasetuksetmodal.sulje=Sulje
+
+funktiokutsuasetuksetmodal.tyyppi=Tyyppi
+funktiokutsuasetuksetmodal.pakollinen=Pakollinen tieto
+funktiokutsuasetuksetmodal.kuvaus=Kuvaus
+funktiokutsuasetuksetmodal.tunniste=Tunniste
+funktiokutsuasetuksetmodal.generoi=Generoi tunniste
+funktiokutsuasetuksetmodal.hylkays=Hylk\u00E4ysperustekuvaukset
+funktiokutsuasetuksetmodal.kieli=Kieli
+funktiokutsuasetuksetmodal.poistaparametri=Poista parametri
+funktiokutsuasetuksetmodal.palauta=Palauta haettu arvo
+funktiokutsuasetuksetmodal.pisteet=Pisteet
+funktiokutsuasetuksetmodal.hylkaysperuste=Hylk\u00E4ysperuste
+funktiokutsuasetuksetmodal.arvo=Arvo
+funktiokutsuasetuksetmodal.funktioasetukset=Funktioasetukset
+funktiokutsuasetuksetmodal.tallentaminen=Funktiokutsun tallentaminen laskentakaavana
+funktiokutsuasetuksetmodal.eivoimuokata=Alikaavan funktiokutsuja ei voi muokata.
+funktiokutsuasetuksetmodal.valintaperusteviitteet=Valintaperusteviitteet
+funktiokutsuasetuksetmodal.arvomuunnin=Arvomuunnin
+funktiokutsuasetuksetmodal.konversiomaarittelyt=Konversiom\u00E4\u00E4rittelyt
+funktiokutsuasetuksetmodal.parametri=Parametri
+funktiokutsuasetuksetmodal.arvonmaarittelyt=Arvon m\u00E4\u00E4rittelyt
+funktiokutsuasetuksetmodal.maarite=M\u00E4\u00E4rite
+funktiokutsuasetuksetmodal.avain=Avain
+funktiokutsuasetuksetmodal.tallennatulos=Tallenna tulos
+funktiokutsuasetuksetmodal.tulostunniste=Tulostunniste
+funktiokutsuasetuksetmodal.tulostunnistepakollinen=Tulostunniste on pakollinen
+funktiokutsuasetuksetmodal.tulostekstifi=Tulosteksti FI
+funktiokutsuasetuksetmodal.tulostekstisv=Tulosteksti SV
+funktiokutsuasetuksetmodal.tulostekstien=Tulosteksti EN
+funktiokutsuasetuksetmodal.laskentakaavaksi=Laskentakaavaksi tallennettava funktiokutsu
+funktiokutsuasetuksetmodal.laskentakaavannimi=Laskentakaavan nimi
+funktiokutsuasetuksetmodal.laskentakaavankuvaus=Laskentakaavan kuvaus
+funktiokutsuasetuksetmodal.laskentakaavantyyppi=Laskentakaavan tyyppi
+funktiokutsuasetuksetmodal.totuusarvofunktio=Totuusarvofunktio
+funktiokutsuasetuksetmodal.lukuarvofunktio=Lukuarvofunktio
+funktiokutsuasetuksetmodal.kaavanosantallennus=Kaavan osan tallennus
+funktiokutsuasetuksetmodal.muutokseteivat=Muutokset eiv\u00E4t tallennu ennen kuin tallennat kaavan laskentakaavan\u00E4kym\u00E4st\u00E4
+funktiokutsuasetuksetmodal.poistafunktiokutsu=Poista funktiokutsu
+funktiokutsuasetuksetmodal.sulje=Sulje
+funktiokutsuasetuksetmodal.palaafunktioasetuksiin=Palaa funktioasetuksiin
+funktiokutsuasetuksetmodal.tallenna=Tallenna uutena laskentakaavana
