VT-874 Lokalisointipalvelun käyttöönotto valinnoissa

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -538,3 +538,63 @@ funktiokutsuasetuksetmodal.poistafunktiokutsu=Poista funktiokutsu
 funktiokutsuasetuksetmodal.sulje=Sulje
 funktiokutsuasetuksetmodal.palaafunktioasetuksiin=Palaa funktioasetuksiin
 funktiokutsuasetuksetmodal.tallenna=Tallenna uutena laskentakaavana
+
+jarjestyskriteeri.header=J\u00E4rjestyskriteerin muokkaus
+jarjestyskriteeri.metatiedot=Metatiedot
+jarjestyskriteeri.laskentakaavanvalinta=Laskentakaavan valinta
+jarjestyskriteeri.kaavaavataan=Kaava avataan uuteen v\u00E4lilehteen
+jarjestyskriteeri.naytakaava=N\u00E4yt\u00E4 kaava
+jarjestyskriteeri.lisaa=Lis\u00E4\u00E4
+jarjestyskriteeri.muokkaa=Muokkaa
+
+valintaryhmansiirtomodal.header=Siirr\u00E4 hakukohde toiseen valintaryhm\u00E4\u00E4n
+valintaryhmansiirtomodal.siirra=Siirr\u00E4
+valintaryhmansiirtomodal.sulje=Sulje
+
+hakukohdelomake.header=Hakukohteen muokkaus
+hakukohdelomake.hakukohteennimi=Hakukohteen nimi
+hakukohdelomake.hakukohdekoodi=Hakukohdekoodi
+hakukohdelomake.koodi=koodi
+hakukohdelomake.arvo=arvo
+hakukohdelomake.nimi=nimi
+hakukohdelomake.paivita=P\u00E4ivit\u00E4
+hakukohdelomake.hauntunniste=Haun Tunniste (oid)
+hakukohdelomake.tarjoaja=Tarjoaja (oid)
+hakukohdelomake.julkaisutila=Julkaisutila
+hakukohdelomake.valintaryhma=Valintaryhm\u00E4
+hakukohdelomake.siirra=Siirr\u00E4
+hakukohdelomake.kuuluusijoitteluun=Kuuluu sijoitteluun
+hakukohdelomake.valinnanvaiheet=Valinnan vaiheet
+hakukohdelomake.aktiivinen=Aktiivinen
+hakukohdelomake.nimiiso=Nimi
+hakukohdelomake.periytyy=Periytyy
+hakukohdelomake.tyyppi=Tyyppi
+hakukohdelomake.poista=Poista
+hakukohdelomake.valinnanvaihe=Valinnanvaihe
+hakukohdelomake.valintakoevalinnanvaihe=Valintakoevalinnanvaihe
+hakukohdelomake.hakijaryhmat=Hakijaryhm\u00E4t
+hakukohdelomake.laskentakaava=Laskentakaava
+hakukohdelomake.kiintio=Kiinti\u00F6
+hakukohdelomake.valintatapajonot=Valintatapajonot
+hakukohdelomake.hakijaryhma=Hakijaryhm\u00E4
+
+hakukohdeuusi.header=Hakukohteen luonti
+hakukohdeuusi.ylavalintaryhma=Yl\u00E4valintaryhm\u00E4
+hakukohdeuusi.hakukohteennimi=Hakukohteen nimi
+hakukohdeuusi.hauntunniste=Haun Tunniste
+hakukohdeuusi.tyhjenna=Tyhjennä
+hakukohdeuusi.hakukohteentunniste=Hakukohteen tunniste
+hakukohdeuusi.tarjoaja=Tarjoaja
+hakukohdeuusi.julkaisutila=Julkaisutila
+
+hakijaryhma.header=Hakijaryhm\u00E4n muokkaus
+hakijaryhma.oid=OID
+hakijaryhma.nimi=Nimi
+hakijaryhma.kuvaus=Kuvaus
+hakijaryhma.maara=M\u00E4\u00E4r\u00E4
+hakijaryhma.laskentakaava=Laskentakaava
+hakijaryhma.liitetyt=Liitetyt valintatapajonot
+hakijaryhma.aktiivinen=Aktiivinen
+hakijaryhma.periytyminen=Periytyminen
+hakijaryhma.lisaa=Lis\u00E4\u00E4
+hakijaryhma.muokkaa=Muokkaa
