VT-874 Lokalisointipalvelun käyttöönotto valinnoissa

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -598,3 +598,29 @@ hakijaryhma.aktiivinen=Aktiivinen
 hakijaryhma.periytyminen=Periytyminen
 hakijaryhma.lisaa=Lis\u00E4\u00E4
 hakijaryhma.muokkaa=Muokkaa
+
+breadcrumb.header=Valintaryhm\u00E4t ja hakukohteet
+
+hakukohdekoodinvalinta.header=Hakukohdekoodin lis\u00E4ys
+hakukohdekoodinvalinta.hakukohdekoodi=Hakukohdekoodi
+hakukohdekoodinvalinta.valittu=Valittu hakukohdekoodi
+hakukohdekoodinvalinta.suodata=Suodata hakukohdekoodeja
+hakukohdekoodinvalinta.sulje=Sulje
+
+organisaatio.header=Valintaryhm\u00E4n liitt\u00E4minen organisaatioon
+organisaatio.lisaa=Lis\u00E4\u00E4 organisaatioita
+organisaatio.sulje=Sulje
+
+organisaatioselector.organisaatio=Organisaatio
+
+valintakoekoodinvalinta.header=Valintakoekoodin lis\u00E4ys
+valintakoekoodinvalinta.valintakoekoodi=Valintakoekoodi
+valintakoekoodinvalinta.valittu=Valittu valintakoekoodi
+valintakoekoodinvalinta.suodata=Suodata valintakoekoodeja
+valintakoekoodinvalinta.sulje=Sulje
+
+valintaryhmaselector.suodata=Suodata valintaryhmi\u00E4
+valintaryhmaselector.avaa=Avaa puu
+valintaryhmaselector.juuri=Juuri
+valintaryhmaselector.hakupalautti=Haku palautti
+valintaryhmaselector.valintaryhmaa=valintaryhm\u00E4\u00E4
