VT-381 Koekutsutoiminnon laajentaminen korkeakoulujen tarpeisiin

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -379,6 +379,7 @@ valintakoelomake.kutsutaanko=Kutsutaanko kaikki
 valintakoelomake.valintakokeenlaskentakaava=Valintakokeen laskentakaava
 valintakoelomake.laskentakaava=Laskentakaava
 valintakoelomake.valintaryhma=Valintaryhm\u00E4 / Hakukohde
+valintakoelomake.maara=Kutsuttavien m\u00E4\u00E4r\u00E4
 
 valintakoevalinnanvaihelomake.header=Koekutsuvaiheen muokkaus
 valintakoevalinnanvaihelomake.nimi=Nimi
@@ -397,6 +398,7 @@ valinnanvaihelomake.valintatapajonot=Valintatapajonot
 valinnanvaihelomake.aktiivinen=Aktiivinen
 valinnanvaihelomake.periytyminen=Periytyminen
 valinnanvaihelomake.poista=Poista
+valinnanvaihelomake.jono=Jono
 
 laskentakaavalista.header=Laskentakaavojen hallinta
 laskentakaavalista.laskentakaava=Laskentakaava
