VT-928 Lisätään varmistusdialogi valinnan vaiheen poistamiseen

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -353,6 +353,10 @@ valintaryhmalomake.hakijaryhmat=Hakijaryhm\u00E4t
 valintaryhmalomake.laskentakaava=Laskentakaava
 valintaryhmalomake.kiintio=Kiinti\u00F6
 valintaryhmalomake.hakijaryhma=Hakijaryhm\u00E4
+valintaryhmalomake.poistavalinnanvaihe.header=Oletko varma?
+valintaryhmalomake.poistavalinnanvaihe.body=Oletko varma, ett\u00E4 haluat poistaa valinnan vaiheen?
+valintaryhmalomake.poistavalinnanvaihe.kylla=Kyll\u00E4
+valintaryhmalomake.poistavalinnanvaihe.ei=Ei
 
 valintakoekoodit.header=Valintakoekoodit
 valintakoekoodit.uusi=Uusi valintakoekoodi
