VT-926 Valintaryhmän luomisessa virheilmoitus, jos ryhmälle annettu nimi on jo käytössä juuressa tai samassa valintaryhmässä

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -337,6 +337,7 @@ valintaryhmalomakeuusi.nimipieni=nimi
 valintaryhmalomakeuusi.tyyppi=tyyppi
 valintaryhmalomakeuusi.oid=oid
 valintaryhmalomakeuusi.poista=poista
+valintaryhmalomakeuusi.nimiloytyyjo=Valintaryhm\u00E4n nimi on jo k\u00E4yt\u00F6ss\u00E4. Anna jokin toinen nimi ryhm\u00E4lle.
 
 valintaryhmalomake.header=Valintaryhm\u00E4n muokkaus
 valintaryhmalomake.nimi=Nimi
