VT-933 Lisätään varmistusdialogi jononmuodostamiskriteerin poistamiseen

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -304,6 +304,10 @@ valintatapajono.maara=M\u00E4\u00E4r\u00E4
 valintatapajono.periytyy=Periytyy
 valintatapajono.liita=Liit\u00E4 hakijaryhm\u00E4
 valintatapajono.tallennahakijaryhma=Tallenna jono lis\u00E4t\u00E4ksesi hakijaryhm\u00E4.
+valintatapajono.poistajononmuodostumiskriteeri.header=Oletko varma?
+valintatapajono.poistajononmuodostumiskriteeri.body=Oletko varma, ett\u00E4 halua poistaa jonon muodostumiskriteerin?
+valintatapajono.poistajononmuodostumiskriteeri.kylla=Kyll\u00E4
+valintatapajono.poistajononmuodostumiskriteeri.ei=Ei
 
 hakijaryhmavalintatapajono.header=Hakijaryhm\u00E4n liitt\u00E4minen
 hakijaryhmavalintatapajono.hakijaryhmat=Hakijaryhm\u00E4t
