Vanhat lokalisointitoteutukset korvattu uusilla etusivulla

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -82,6 +82,7 @@ tabs.yhteisvalinnanhallinta 			= Yhteisvalinnan hallinta
 
 #etusivu (valintaryhmalistaus)
 valintaryhmatlistaus.add.valintaryhma	= Valintaryhmä
+valintaryhmalistaus.add.hakukohde       = Hakukohde
 valintaryhmatlistaus.valmiitjajulkaistut = Vain valmiit ja julkaistut
 valintaryhmatlistaus.hakukohteitasisaltavat = Vain hakukohteita sisältävät ryhmät
 valintaryhmatlistaus.hakukohteet 		= Vain hakukohteet
