VT-934: tallennusta vaille valmis toteutus

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -416,6 +416,7 @@ laskentakaavalista.laskentakaavalista=Laskentakaavalista
 laskentakaavalista.yhtaan=Yht\u00E4\u00E4n laskentakaavaa ei ole luotu.
 laskentakaavalista.nimi=Nimi
 laskentakaavalista.kuvaus=Kuvaus
+laskentakaavalista.kopioikaava=Kopioi kaava
 
 hakukohdelaskentakaavalista.header=Laskentakaavojen hallinta
 hakukohdelaskentakaavalista.uusi=Uusi laskentakaava
