--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -26,8 +26,9 @@ valintaperusteet.takaisin 				= Takaisin
 valintaperusteet.kiintio 				= Kiintiö
 valintaperusteet.liita 					= Liitä
 valintaperusteet.julkaistu 				= Julkaistu
-valintaperusteet.valinnanvaihe 			= Valinnan vaihe'
-valintaperusteet.valinnanvaiheet 		= Valinnan vaiheet
+valintaperusteet.valinnanvaihe 			= Valinnanvaihe
+valintaperusteet.valintakoevalinnanvaihe = Valintakoevalinnanvaihe
+valintaperusteet.valinnanvaiheet 		= Valinnanvaiheet
 valintaperusteet.koekutsuvaihe 			= Koekutsuvaihe
 valintaperusteet.haku 					= Haku
 valintaperusteet.hae 					= Hae
