--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -268,6 +268,7 @@ common.import=Yhteisvalinnan hallinta
 common.muista=Muista tallentaa muutoksesi
 common.takaisin=Takaisin
 common.tallenna=Tallenna
+common.poista=Poista
 
 yhteisvalinnanhallinta.synkronoi=Synkronoi tarjonta
 
@@ -364,6 +365,10 @@ valintaryhmalomake.poistavalinnanvaihe.header=Oletko varma?
 valintaryhmalomake.poistavalinnanvaihe.body=Oletko varma, ett\u00E4 haluat poistaa valinnan vaiheen?
 valintaryhmalomake.poistavalinnanvaihe.kylla=Kyll\u00E4
 valintaryhmalomake.poistavalinnanvaihe.ei=Ei
+valintaryhmalomake.poistavalintaryhma.header=Oletko varma?
+valintaryhmalomake.poistavalintaryhma.body=Oletko varma, ett\u00E4 haluat poistaa valinnan vaiheen?
+valintaryhmalomake.poistavalintaryhma.kylla=Kyll\u00E4
+valintaryhmalomake.poistavalintaryhma.ei=Ei
 
 valintakoekoodit.header=Valintakoekoodit
 valintakoekoodit.uusi=Uusi valintakoekoodi
