--- a/src/main/webapp/common/i18n/messages_en_US.properties
+++ b/src/main/webapp/common/i18n/messages_en_US.properties
@@ -26,7 +26,7 @@ valintaperusteet.takaisin 				= Takaisin
 valintaperusteet.kiintio 				= Kiintiö
 valintaperusteet.liita 					= Liitä
 valintaperusteet.julkaistu 				= Julkaistu
-valintaperusteet.valinnanvaihe 			= Valinnan vaihe'
+valintaperusteet.valinnanvaihe 			= Valinnan vaihe
 valintaperusteet.valinnanvaiheet 		= Valinnan vaiheet
 valintaperusteet.koekutsuvaihe 			= Koekutsuvaihe
 valintaperusteet.haku 					= Haku
