--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -369,6 +369,7 @@ valintaryhmalomake.poistavalintaryhma.header=Oletko varma?
 valintaryhmalomake.poistavalintaryhma.body=Oletko varma, ett\u00E4 haluat poistaa valinnan vaiheen?
 valintaryhmalomake.poistavalintaryhma.kylla=Kyll\u00E4
 valintaryhmalomake.poistavalintaryhma.ei=Ei
+valintaryhmalomake.kopioihakijaryhma=Kopioi hakijaryhmä
 
 valintakoekoodit.header=Valintakoekoodit
 valintakoekoodit.uusi=Uusi valintakoekoodi
