VT-951 Lisätään varmistusdialogi hakijaryhmän poistamiseen

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -308,9 +308,13 @@ valintatapajono.periytyy=Periytyy
 valintatapajono.liita=Liit\u00E4 hakijaryhm\u00E4
 valintatapajono.tallennahakijaryhma=Tallenna jono lis\u00E4t\u00E4ksesi hakijaryhm\u00E4.
 valintatapajono.poistajononmuodostumiskriteeri.header=Oletko varma?
-valintatapajono.poistajononmuodostumiskriteeri.body=Oletko varma, ett\u00E4 halua poistaa jonon muodostumiskriteerin?
+valintatapajono.poistajononmuodostumiskriteeri.body=Oletko varma, ett\u00E4 haluat poistaa jonon muodostumiskriteerin?
 valintatapajono.poistajononmuodostumiskriteeri.kylla=Kyll\u00E4
 valintatapajono.poistajononmuodostumiskriteeri.ei=Ei
+valintatapajono.poistahakijaryhma.header=Oletko varma?
+valintatapajono.poistahakijaryhma.body=Oletko varma, ett\u00E4 haluat poistaa hakijaryhm\u00E4n?
+valintatapajono.poistahakijaryhma.kylla=Kyll\u00E4
+valintatapajono.poistahakijaryhma.ei=Ei
 
 hakijaryhmavalintatapajono.header=Hakijaryhm\u00E4n liitt\u00E4minen
 hakijaryhmavalintatapajono.hakijaryhmat=Hakijaryhm\u00E4t
