VT-953 Varmistusdialogi hakijaryhmän poistamiseen valintaryhmätasolta

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -374,6 +374,10 @@ valintaryhmalomake.poistavalintaryhma.body=Oletko varma, ett\u00E4 haluat poista
 valintaryhmalomake.poistavalintaryhma.kylla=Kyll\u00E4
 valintaryhmalomake.poistavalintaryhma.ei=Ei
 valintaryhmalomake.kopioihakijaryhma=Kopioi hakijaryhmä
+valintaryhmalomake.poistahakijaryhma.header=Oletko varma?
+valintaryhmalomake.poistahakijaryhma.body=Oletko varma, ett\u00E4 haluat poistaa hakijaryhm\u00E4n?
+valintaryhmalomake.poistahakijaryhma.kylla=Kyll\u00E4
+valintaryhmalomake.poistahakijaryhma.ei=Ei
 
 valintakoekoodit.header=Valintakoekoodit
 valintakoekoodit.uusi=Uusi valintakoekoodi
