VT-966 Varoitus jos poistettavalla valintaryhmällä on laskentakaava

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -371,6 +371,7 @@ valintaryhmalomake.poistavalinnanvaihe.kylla=Kyll\u00E4
 valintaryhmalomake.poistavalinnanvaihe.ei=Ei
 valintaryhmalomake.poistavalintaryhma.header=Oletko varma?
 valintaryhmalomake.poistavalintaryhma.body=Oletko varma, ett\u00E4 haluat poistaa valinnan vaiheen?
+valintaryhmalomake.poistavalintaryhmalaskentakaavoja.body=Valintaryhm\u00E4ll\u00E4 on laskentakaavoja.
 valintaryhmalomake.poistavalintaryhma.kylla=Kyll\u00E4
 valintaryhmalomake.poistavalintaryhma.ei=Ei
 valintaryhmalomake.kopioihakijaryhma=Kopioi hakijaryhmä
