--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -137,6 +137,7 @@ hakijaryhma.liitetytjonot 				= Liitetyt valintatapajonot
 #laskentakaavat
 laskentakaavat.hallinta 				= Laskentakaavojen hallinta
 laskentakaavat.lista 					= Laskentakaavalista
+laskentakaavat.listaan                  = Laskentakaavalistaan
 laskentakaavat.eiluotuja 				= Yhtään laskentakaavaa ei ole luotu
 laskentakaavat.valintaryhmalleeiluotuja = Tälle valintaryhmälle ei ole luotu yhtään laskentakaavaa
 laskentakaavat.hakukohteelleeiluotuja 	= Tälle hakukohteelle ei ole luotu yhtään laskentakaavaa
@@ -150,6 +151,7 @@ laskentakaavat.lukuarvofunktio 			= Lukuarvofunktio
 laskentakaavat.totuusarvofunktio 		= Totuusarvofunktio
 laskentakaavat.muokkaus 				= Laskentakaavan muokkaus
 laskentakaavat.generoitunniste 			= Generoi tunniste
+laskentakaavat.hakijaryhmanluontiin     = Takaisin hakijaryhmän luontiin
 
 laskentakaavat.funktioasetukset 		= Funktioasetukset
 laskentakaavat.funktioasetukset.hylkaysperuste = Hylkäysperuste
