--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -144,6 +144,7 @@ laskentakaavat.hakukohteelleeiluotuja 	= Tälle hakukohteelle ei ole luotu yhtä
 laskentakaavat.uusi 					= Uusi laskentakaava
 laskentakaavat.luonti 					= Uuden laskentakaavan luonti
 laskentakaavat.alusta 					= Alusta uusi laskentakaava
+laskentakaavat.uusikaava.tallenna       = Tallenna uusi laskentakaava
 laskentakaavat.tyyppi 					= Laskentakaavan tyyppi
 laskentakaavat.kuvaus 					= Laskentakaavan kuvaus
 laskentakaavat.nimi 					= Laskentakaavan nimi
