VT-587: hakukelpoisuus -funktiokutsu lisätty

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -252,6 +252,7 @@ laskentakaavat.funktiokutsu.HAKUTOIVE = Hakutoive
 laskentakaavat.funktiokutsu.HAEMERKKIJONOJAKONVERTOITOTUUSARVOKSI = Hae merkkijono ja konvertoi totuusarvoksi
 laskentakaavat.funktiokutsu.HAEMERKKIJONOJAVERTAAYHTASUURUUS = Hae merkkijono ja vertaa yhtäsuuruus
 laskentakaavat.funktiokutsu.VALINTAPERUSTEYHTASUURUUS = Valintaperusteyhtasuuruus
+laskentakaavat.funktiokutsu.HAKUKELPOISUUS = Hakukelpoisuus
 laskentakaavat.funktiokutsu.LASKENTAKAAVAVIITE = Viittaus toiseen kaavaan
 
 laskentakaavat.validointi.tulostunnistepuuttuu = tulostunniste täytyy määritellä, jos Tallenna tulos -kenttä on valittu
@@ -521,6 +522,7 @@ laskentakaavapuu.hakutoive=Hakutoive
 laskentakaavapuu.haemerkkijonototuusarvoksi=Hae merkkijono ja konvertoi totuusarvoksi
 laskentakaavapuu.haemerkkijonoyhtasuuruus=Hae merkkijono ja vertaa yht\u00E4suuruus
 laskentakaavapuu.valintaperusteyhtasuuruus=Valintaperusteyht\u00E4suuruus
+laskentakaavapuu.hakukelpoisuus = Hakukelpoisuus
 
 laskentakaavaviiteasetuksetmodal.laskentakaavaviitteen=Laskentakaavaviitteen valinta
 laskentakaavaviiteasetuksetmodal.alikaavan=Alikaavan laskentakaavaviite
