VT-1016: valintaryhmälomakkeelle lisätty modali, johon valintaryhmähierarkian kopioinnin voi tehdä

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -74,6 +74,8 @@ valintaperusteet.kieli 					= Kieli
 valintaperusteet.pisteet 				= Pisteet
 valintaperusteet.parametri 				= Parametri
 valintaperusteet.avain 					= Avain
+valintaperusteet.kopioi                 = Kopioi
+valintaperusteet.peruuta                = Peruuta
 
 #tabit
 tabs.laskentakaavat 					= Laskentakaavat
@@ -97,6 +99,8 @@ valintaryhma.uusivalintakoekoodi 		= Uusi valintakoekoodi
 valintaryhma.uusihakukohdekoodi 		= Uusi hakukohdekoodi
 valintaryhma.valintakoekoodit.eiliitettyja = Tähän valintaryhmään ei ole vielä liitetty yhtään valintakoekoodia
 valintaryhma.hakukohdekoodit.eiliitettyja = Tähän valintaryhmään ei ole vielä liitetty yhtään hakukohdekoodia
+valintaryhma.
+
 
 #hakukohde
 hakukohde.siirravalintaryhmaan 			= Siirrä hakukohde toiseen valintaryhmään
@@ -383,6 +387,12 @@ valintaryhmalomake.poistahakijaryhma.header=Oletko varma?
 valintaryhmalomake.poistahakijaryhma.body=Oletko varma, ett\u00E4 haluat poistaa hakijaryhm\u00E4n?
 valintaryhmalomake.poistahakijaryhma.kylla=Kyll\u00E4
 valintaryhmalomake.poistahakijaryhma.ei=Ei
+valintaryhmalomake.hallinnoi=Hallinnoi valintaryhmää
+valintaryhmalomake.kopioi.valintaryhma.nimi=Kopioitavan valintaryhmän nimi
+valintaryhmalomake.kopioi.valintaryhma.kopioi=Valintaryhmän kopiointi
+valintaryhmalomake.kopioi.valintaryhma.kopiointi=Kopioi valintaryhmä
+valintaryhmalomake.kopioi.hakijaryhma.nimi=Kopioitavan hakijaryhmän nimi
+valintaryhmalomake.kopioi.hakijaryhma.otsikko=Hakijaryhmän kopiointi toiseen valintaryhmään
 
 valintakoekoodit.header=Valintakoekoodit
 valintakoekoodit.uusi=Uusi valintakoekoodi
