hakukohteen laskentakaavat lisätty kaavaeditorin laskentakaavaviitemodaliin

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -529,6 +529,7 @@ laskentakaavaviiteasetuksetmodal.alikaavan=Alikaavan laskentakaavaviite
 laskentakaavaviiteasetuksetmodal.eivoivaihtaa=Alikaavan laskentakaavaviitteit\u00E4 ei voi vaihtaa. Voit kuitenkin siirty\u00E4 suoraan valitsemasi laskentakaavan muokkaukseen kyn\u00E4-ikonista.
 laskentakaavaviiteasetuksetmodal.nimi=Valitun laskentakaavaviitteen nimi
 laskentakaavaviiteasetuksetmodal.valintaryhma=Valintaryhm\u00E4
+laskentakaavaviiteasetuksetmodal.hakukohde=Hakukohde
 laskentakaavaviiteasetuksetmodal.poista=Poista laskentakaavaviite
 laskentakaavaviiteasetuksetmodal.sulje=Sulje
 
