VT-980: uusia kaavavirhetarkistuksia

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -459,6 +459,7 @@ laskentakaavalomake.header=Laskentakaavan muokkaus
 
 laskentakaavapuu.eitalletettu=Laskentakaavaa ei voitu tallentaa.
 laskentakaavapuu.eitalletettutext=Alla olevasta listasta saat vihjeitä kaavan virheistä ja virheellisen funktiokutsun tapauksessa pääset muokkaamaan sitä suoraan klikkaamalla virheilmoitusta. Yritä laskentakaavan tallennusta uudestaan heti virheet korjattuasi.
+laskentakaavapuu.eitalletettuhuom=Huomaa, että käyttöliittymässä suoritettava laskentakaavan validointi ei huomaa kaikkia virheitä. Tarkasta kaava ilmeisten virheiden varalta ja yritä tallennusta uudestaan
 laskentakaavapuu.funktiossavirhe=-funktiokutsussa on virhe.
 laskentakaavapuu.onnistui=Laskentakaavan tallentaminen onnistui
 laskentakaavapuu.laskentakaava=Laskentakaava
