VT-992: laskentakaavan poiston yhteydessä varmistusdialogi

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -74,6 +74,7 @@ valintaperusteet.kieli 					= Kieli
 valintaperusteet.pisteet 				= Pisteet
 valintaperusteet.parametri 				= Parametri
 valintaperusteet.avain 					= Avain
+valintaperusteet.peruuta                = Peruuta
 
 #tabit
 tabs.laskentakaavat 					= Laskentakaavat
@@ -437,6 +438,7 @@ laskentakaavalista.yhtaan=Yht\u00E4\u00E4n laskentakaavaa ei ole luotu.
 laskentakaavalista.nimi=Nimi
 laskentakaavalista.kuvaus=Kuvaus
 laskentakaavalista.kopioikaava=Kopioi kaava
+laskentakaavalista.poisto.varmistus=Oletko varma, että haluat poistaa laskentakaavan?
 
 hakukohdelaskentakaavalista.header=Laskentakaavojen hallinta
 hakukohdelaskentakaavalista.uusi=Uusi laskentakaava
