--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -76,6 +76,18 @@ valintaperusteet.parametri 				= Parametri
 valintaperusteet.avain 					= Avain
 valintaperusteet.peruuta                = Peruuta
 
+
+#hakulista
+hakulista.header=Haku
+hakulista.rajaa=Rajaa hakuja
+hakulista.hakuvuosi=Hakuvuosi
+hakulista.hakukausi=Hakukausi
+hakulista.hakutyyppi=Hakutyyppi
+hakulista.kohdejoukko=Kohdejoukko
+hakulista.hakutapa=Hakutapa
+
+
+
 #tabit
 tabs.laskentakaavat 					= Laskentakaavat
 tabs.etusivu 							= Valintaryhmät ja hakukohteet
@@ -83,6 +95,7 @@ tabs.yhteisvalinnanhallinta 			= Yhteisvalinnan hallinta
 
 
 #etusivu (valintaryhmalistaus)
+valintaryhmatlistaus.haku               = Haku
 valintaryhmatlistaus.add.valintaryhma	= Valintaryhmä
 valintaryhmalistaus.add.hakukohde       = Hakukohde
 valintaryhmatlistaus.valmiitjajulkaistut = Vain valmiit ja julkaistut
