--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -452,6 +452,7 @@ laskentakaavalista.nimi=Nimi
 laskentakaavalista.kuvaus=Kuvaus
 laskentakaavalista.kopioikaava=Kopioi kaava
 laskentakaavalista.poisto.varmistus=Oletko varma, että haluat poistaa laskentakaavan?
+laskentakaavalista.poisto.epaonnistui=Laskentakaavan poistaminen epäonnistui. Tämä voi johtua siitä, että laskentakaava on käytössä.
 
 hakukohdelaskentakaavalista.header=Laskentakaavojen hallinta
 hakukohdelaskentakaavalista.uusi=Uusi laskentakaava
