--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -598,6 +598,9 @@ funktiokutsuasetuksetmodal.poistafunktiokutsu=Poista funktiokutsu
 funktiokutsuasetuksetmodal.sulje=Sulje
 funktiokutsuasetuksetmodal.palaafunktioasetuksiin=Palaa funktioasetuksiin
 funktiokutsuasetuksetmodal.tallenna=Tallenna uutena laskentakaavana
+funktiokutsuasetuksetmodal.poista.arvokonvertteri = Poista arvokonvertteri
+funktiokutsuasetuksetmodal.poista.arvovalikonvertteri = Poista arvovälikonvertteri
+
 
 jarjestyskriteeri.header=J\u00E4rjestyskriteerin muokkaus
 jarjestyskriteeri.metatiedot=Metatiedot
