--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -557,6 +557,7 @@ laskentakaavaviiteasetuksetmodal.valintaryhma=Valintaryhm\u00E4
 laskentakaavaviiteasetuksetmodal.hakukohde=Hakukohde
 laskentakaavaviiteasetuksetmodal.poista=Poista laskentakaavaviite
 laskentakaavaviiteasetuksetmodal.sulje=Sulje
+laskentakaavaviiteasetuksetmodal.funktiokutsunKaariminen = Funktiokutsun kääriminen toisella funktiokutsulla
 
 funktiokutsuasetuksetmodal.tyyppi=Tyyppi
 funktiokutsuasetuksetmodal.pakollinen=Pakollinen tieto
