VT-1139: näytetään funktiokutsulle kaikki mahdolliset käärivät funktiokutsut

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -557,7 +557,7 @@ laskentakaavaviiteasetuksetmodal.valintaryhma=Valintaryhm\u00E4
 laskentakaavaviiteasetuksetmodal.hakukohde=Hakukohde
 laskentakaavaviiteasetuksetmodal.poista=Poista laskentakaavaviite
 laskentakaavaviiteasetuksetmodal.sulje=Sulje
-laskentakaavaviiteasetuksetmodal.funktiokutsunKaariminen = Funktiokutsun kääriminen toisella funktiokutsulla
+laskentakaavaviiteasetuksetmodal.kaariminen = Funktiokutsun kääriminen
 
 funktiokutsuasetuksetmodal.tyyppi=Tyyppi
 funktiokutsuasetuksetmodal.pakollinen=Pakollinen tieto
