VT-1139: Käärittävän funktiokutsun sijainnin voi määritellä niille funktiokutsuille, joiden funktioargumentit on nimettyjä

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -558,6 +558,9 @@ laskentakaavaviiteasetuksetmodal.hakukohde=Hakukohde
 laskentakaavaviiteasetuksetmodal.poista=Poista laskentakaavaviite
 laskentakaavaviiteasetuksetmodal.sulje=Sulje
 laskentakaavaviiteasetuksetmodal.kaariminen = Funktiokutsun kääriminen
+laskentakaavaviiteasetuksetmodal.kaareenvalinta.palaa = Palaa funktiokutsun käärefunktion valintaan
+laskentakaavaviiteasetuksetmodal.kaareenvalinta.ohje = Valitse funktioargumentti, johon nykyinen funktiokutsu asetetaan
+laskentakaavaviiteasetuksetmodal.kaareenvalinta.tallenna = Kääri funktiokutsu
 
 funktiokutsuasetuksetmodal.tyyppi=Tyyppi
 funktiokutsuasetuksetmodal.pakollinen=Pakollinen tieto
