VT-1139: aloitetaan geneerisemmän funktiokutsulistan toteutus

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -561,6 +561,7 @@ laskentakaavaviiteasetuksetmodal.kaariminen = Funktiokutsun kääriminen
 laskentakaavaviiteasetuksetmodal.kaareenvalinta.palaa = Palaa funktiokutsun käärefunktion valintaan
 laskentakaavaviiteasetuksetmodal.kaareenvalinta.ohje = Valitse funktioargumentti, johon nykyinen funktiokutsu asetetaan
 laskentakaavaviiteasetuksetmodal.kaareenvalinta.tallenna = Kääri funktiokutsu
+laskentakaavaviiteasetuksetmodal.kaareenvalinta.kaarija = Käärivä funktiokutsu
 
 funktiokutsuasetuksetmodal.tyyppi=Tyyppi
 funktiokutsuasetuksetmodal.pakollinen=Pakollinen tieto
