VT-1139: modalien käyttöliittymät valmiiksi

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -606,6 +606,8 @@ funktiokutsuasetuksetmodal.kaareenvalinta.palaa = Palaa funktiokutsun käärefun
 funktiokutsuasetuksetmodal.kaareenvalinta.ohje = Valitse funktioargumentti, johon nykyinen funktiokutsu asetetaan
 funktiokutsuasetuksetmodal.kaareenvalinta.tallenna = Kääri funktiokutsu
 funktiokutsuasetuksetmodal.kaareenvalinta.kaarija = Käärivä funktiokutsu
+funktiokutsuasetuksetmodal.kaareenvalinta.sijainti = Käärittävän sijoittaminen
+funktiokutsuasetuksetmodal.kaareenvalinta.sijainti.help = Valitulle käärivälle funktiokutsulle on määritelty nimettyjä funktioargumentteja, valitse mihin kohtaan nimettyjen funktioargumenttien listaa haluat laskentakaavasta valitun funktiokutsun kääriä
 
 
 
