VT-741: Lisää N parhaan tulo -funktio

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -491,6 +491,7 @@ laskentakaavapuu.huonoin=huonoin
 laskentakaavapuu.paras=paras
 laskentakaavapuu.suurimmankeskiarvo=suurimman keskiarvo
 laskentakaavapuu.suurimmansumma=suurimman summa
+laskentakaavapuu.suurimmantulo=suurimman tulo
 laskentakaavapuu.nimettylukuarvo=Nimetty lukuarvo
 laskentakaavapuu.nimettytotuusarvo=Nimetty totuusarvo
 laskentakaavapuu.tosi=Tosi
@@ -517,6 +518,7 @@ laskentakaavapuu.mediaani=Mediaani
 laskentakaavapuu.minimi=Minimi
 laskentakaavapuu.maksimi=Maksimi
 laskentakaavapuu.nparastasumma=N parasta summa
+laskentakaavapuu.nparastatulo=N parasta tulo
 laskentakaavapuu.nparastakeskiarvo=N parasta keskiarvo
 laskentakaavapuu.nparas=N paras
 laskentakaavapuu.nhuonoin=N huonoin
