VT-1138: laskentakaavapuun kontrolleriin tarvittavia funktioita

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -559,6 +559,8 @@ laskentakaavaviiteasetuksetmodal.valintaryhma=Valintaryhm\u00E4
 laskentakaavaviiteasetuksetmodal.hakukohde=Hakukohde
 laskentakaavaviiteasetuksetmodal.poista=Poista laskentakaavaviite
 laskentakaavaviiteasetuksetmodal.sulje=Sulje
+laskentakaavaviiteasetuksetmodal.kopioi=Kopioi
+laskentakaavaviiteasetuksetmodal.siirra=Siirrä
 
 
 funktiokutsuasetuksetmodal.tyyppi=Tyyppi
