VT-1138: siirretään funktiokutsujen muokkauksesta työkalut laskentakaavapuunäkymässä avattavaan valikkoon

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -550,6 +550,7 @@ laskentakaavapuu.haemerkkijonototuusarvoksi=Hae merkkijono ja konvertoi totuusar
 laskentakaavapuu.haemerkkijonoyhtasuuruus=Hae merkkijono ja vertaa yht\u00E4suuruus
 laskentakaavapuu.valintaperusteyhtasuuruus=Valintaperusteyht\u00E4suuruus
 laskentakaavapuu.hakukelpoisuus = Hakukelpoisuus
+laskentakaavapuu.lisaaleikepoydalta = Lisää funktiokutsu leikepöydältä
 
 laskentakaavaviiteasetuksetmodal.laskentakaavaviitteen=Laskentakaavaviitteen valinta
 laskentakaavaviiteasetuksetmodal.alikaavan=Alikaavan laskentakaavaviite
